--- a/index.html
+++ b/index.html
@@ -982,8 +982,14 @@
                 </div>
 
                 <!-- Expanded FAQ -->
-                <div class="seo-block faq-block">
-                    <h2 class="seo-title">Servicios de Gestoría: Preguntas Frecuentes 2026</h2>
+                <div class="seo-block faq-block" style="background: transparent; box-shadow: none;">
+                    <div style="text-align: center; margin-bottom: 3rem;">
+                        <h2 class="seo-title" style="color: #1e293b; font-weight: 900; font-size: 2.5rem;">Servicios de
+                            Gestoría: Preguntas Frecuentes 2026</h2>
+                        <p style="color: #64748b; font-size: 1.1rem; max-width: 700px; margin: 1rem auto;">Resolvemos
+                            tus dudas con claridad y dinamismo. Haz clic o pasa el cursor sobre las burbujas para
+                            interactuar.</p>
+                    </div>
                     <div class="faq-grid">
                         <div class="faq-item">
                             <h3>¿Cuál es el costo de un gestor vehicular en CDMX?</h3>
@@ -1854,7 +1860,7 @@
                 <p style="color: #64748b; font-size: 1.1rem; margin-top: 1rem;">Mantenemos una gestión constante y
                     exitosa en toda la zona metropolitana.</p>
             </div>
-            <div class="activity-grid"
+            <div id="activityGrid" class="activity-grid"
                 style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
                 <div class="activity-card"
                     style="padding: 2rem; border-radius: 16px; background: #f8fafc; border: 1px solid #e2e8f0; transition: transform 0.3s ease; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);">
@@ -1884,7 +1890,8 @@
                     <h4 style="font-size: 1.25rem; color: #1e293b; margin-bottom: 0.75rem; font-weight: 700;">Alta de
                         Placas EdoMex 2026</h4>
                     <p style="font-size: 0.95rem; color: #64748b; line-height: 1.6;">Emplacamiento de vehículo nuevo en
-                        <b>Chalco</b>. Cliente evitó filas y recibió sus placas en menos de 24h.</p>
+                        <b>Chalco</b>. Cliente evitó filas y recibió sus placas en menos de 24h.
+                    </p>
                     <div
                         style="margin-top: 1.5rem; padding-top: 1rem; border-top: 1px solid #e2e8f0; display: flex; align-items: center; gap: 0.5rem; color: #16a34a; font-weight: 600; font-size: 0.9rem;">
                         <i class="fas fa-check-circle"></i> Estatus: Finalizado
@@ -1900,7 +1907,8 @@
                     <h4 style="font-size: 1.25rem; color: #1e293b; margin-bottom: 0.75rem; font-weight: 700;">Licencia
                         Permanente CDMX</h4>
                     <p style="font-size: 0.95rem; color: #64748b; line-height: 1.6;">Asesoría integral para conductor en
-                        <b>Tlalnepantla</b>. Trámite legal y garantizado sin intermediarios dudosos.</p>
+                        <b>Tlalnepantla</b>. Trámite legal y garantizado sin intermediarios dudosos.
+                    </p>
                     <div
                         style="margin-top: 1.5rem; padding-top: 1rem; border-top: 1px solid #e2e8f0; display: flex; align-items: center; gap: 0.5rem; color: #16a34a; font-weight: 600; font-size: 0.9rem;">
                         <i class="fas fa-check-circle"></i> Estatus: Verificado
