--- a/index.html
+++ b/index.html
@@ -944,108 +944,121 @@
                         vehiculares en la Ciudad de México y el Estado de México. No importa si necesitas un gestor en
                         Interlomas o placas en Chalco, nosotros nos encargamos de todo.</p>
 
-                    <div class="coverage-grid"
-                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; margin-top: 2rem;">
-                        <div class="coverage-item">
-                            <h4 style="color: #2563eb; margin-bottom: 0.5rem;"><i class="fas fa-map-marker-alt"></i>
-                                Gestoría en Huixquilucan e Interlomas</h4>
-                            <p style="font-size: 0.9rem; color: #64748b;">Servicio premium a domicilio en Interlomas, La
-                                Herradura y Bosque Real. Alta de placas de lujo y licencias rápidas.</p>
+                    <!-- Coverage Pills Section -->
+                    <div class="coverage-pills-container">
+                        <div class="coverage-pill pill-blue">
+                            <h4>Huixquilucan e Interlomas</h4>
+                            <p>Servicio premium a domicilio. Placas de lujo y licencias rápidas.</p>
                         </div>
-                        <div class="coverage-item">
-                            <h4 style="color: #2563eb; margin-bottom: 0.5rem;"><i class="fas fa-map-marker-alt"></i>
-                                Trámites en Chalco e Ixtapaluca</h4>
-                            <p style="font-size: 0.9rem; color: #64748b;">Expertos en regularización, reemplacamiento y
-                                cambio de propietario en la zona oriente del EdoMex.</p>
+                        <div class="coverage-pill pill-purple">
+                            <h4>Chalco e Ixtapaluca</h4>
+                            <p>Expertos en regularización y reemplacamiento en zona oriente.</p>
                         </div>
-                        <div class="coverage-item">
-                            <h4 style="color: #2563eb; margin-bottom: 0.5rem;"><i class="fas fa-map-marker-alt"></i>
-                                Gestoría Vehicular CDMX</h4>
-                            <p style="font-size: 0.9rem; color: #64748b;">Atención en todas las alcaldías: Polanco,
-                                Condesa, Coyoacán y Santa Fe. Licencias permanente (históricas) y renovaciones.</p>
+                        <div class="coverage-pill pill-pink">
+                            <h4>Gestoría Vehicular CDMX</h4>
+                            <p>Todas las alcaldías. Licencias permanentes y renovaciones.</p>
                         </div>
-                        <div class="coverage-item">
-                            <h4 style="color: #2563eb; margin-bottom: 0.5rem;"><i class="fas fa-map-marker-alt"></i>
-                                Naucalpan y Tlalnepantla</h4>
-                            <p style="font-size: 0.9rem; color: #64748b;">Gestión de placas para Satélite, Echegaray y
-                                zonas industriales. Rapidez garantizada sin filas.</p>
+                        <div class="coverage-pill pill-orange">
+                            <h4>Naucalpan y Tlalnepantla</h4>
+                            <p>Satélite y zonas industriales. Rapidez garantizada sin filas.</p>
+                        </div>
+                        <div class="coverage-pill pill-yellow">
+                            <h4>Toluca y Metepec</h4>
+                            <p>Gestión integral en la capital del Estado de México.</p>
+                        </div>
+                        <div class="coverage-pill pill-green">
+                            <h4>Ecatepec de Morelos</h4>
+                            <p>Trámites vehiculares seguros en el municipio más grande.</p>
+                        </div>
+                        <div class="coverage-pill pill-gray">
+                            <h4>Nezahualcóyotl</h4>
+                            <p>Atención personalizada para emplacamiento y bajas.</p>
+                        </div>
+                        <div class="coverage-pill pill-blue">
+                            <h4>Texcoco y Chimalhuacán</h4>
+                            <p>Servicio eficiente en toda la zona metropolitana oriente.</p>
+                        </div>
+                        <div class="coverage-pill pill-purple">
+                            <h4>Morelos (Cuernavaca)</h4>
+                            <p>Especialistas en placas de Morelos y refrendo 2026.</p>
                         </div>
                     </div>
 
-                    <ul class="coverage-list" style="margin-top: 2rem;">
-                        <li><i class="fas fa-check-circle"></i> Toluca y Metepec</li>
-                        <li><i class="fas fa-check-circle"></i> Ecatepec de Morelos</li>
-                        <li><i class="fas fa-check-circle"></i> Nezahualcóyotl</li>
-                        <li><i class="fas fa-check-circle"></i> Texcoco y Chimalhuacán</li>
-                        <li><i class="fas fa-check-circle"></i> Morelos (Placas de Cuernavaca)</li>
-                    </ul>
-                </div>
-
-                <!-- Expanded FAQ -->
-                <div class="seo-block faq-block" style="background: transparent; box-shadow: none;">
-                    <div style="text-align: center; margin-bottom: 3rem;">
-                        <h2 class="seo-title" style="color: #1e293b; font-weight: 900; font-size: 2.5rem;">Servicios de
-                            Gestoría: Preguntas Frecuentes 2026</h2>
-                        <p style="color: #64748b; font-size: 1.1rem; max-width: 700px; margin: 1rem auto;">Resolvemos
-                            tus dudas con claridad y dinamismo. Haz clic o pasa el cursor sobre las burbujas para
-                            interactuar.</p>
+                    <!-- Expanded FAQ -->
+                    <div class="seo-block faq-block" style="background: transparent; box-shadow: none;">
+                        <div style="text-align: center; margin-bottom: 3rem;">
+                            <h2 class="seo-title" style="color: #1e293b; font-weight: 900; font-size: 2.5rem;">Servicios
+                                de
+                                Gestoría: Preguntas Frecuentes 2026</h2>
+                            <p style="color: #64748b; font-size: 1.1rem; max-width: 700px; margin: 1rem auto;">
+                                Resolvemos
+                                tus dudas con claridad y dinamismo. Haz clic o pasa el cursor sobre las burbujas para
+                                interactuar.</p>
+                        </div>
+                        <div class="faq-grid">
+                            <div class="faq-item">
+                                <h3>¿Cuál es el costo de un gestor vehicular en CDMX?</h3>
+                                <p>El costo de nuestra gestoría es competitivo y depende del trámite. Atendemos altas,
+                                    bajas
+                                    y cambios de propietario con <strong>entrega garantizada</strong>.</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>¿Cómo saber si mi auto necesita reemplacamiento?</h3>
+                                <p>Si tus placas fueron expedidas en 2021 o antes, debes reemplacar en 2026. Nosotros
+                                    realizamos tu <strong>reemplacamiento EdoMex online</strong> rápido y seguro.</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>¿Cómo tramitar la Licencia Permanente Tipo A en CDMX?</h3>
+                                <p>La <strong>Licencia Permanente CDMX</strong> sigue disponible en 2026. Nosotros te
+                                    ayudamos a agendar tu cita y gestionar el pago de derechos para asegurar tu trámite
+                                    exitoso.</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>¿Cuándo toca el reemplacamiento 2026 en Edomex?</h3>
+                                <p>El programa de <strong>reemplacamiento Edomex 2026</strong> inicia en el segundo
+                                    semestre. Es obligatorio para placas expedidas en 2021. ¡Contáctanos para
+                                    pre-registrate
+                                    y evitar multas!</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>¿Atienden urgencias de placas en Interlomas?</h3>
+                                <p>Sí, brindamos atención prioritaria en <strong>Interlomas y Huixquilucan</strong>.
+                                    Podemos
+                                    gestionar tus placas y entregarlas en tu domicilio en tiempo récord.</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>¿Es seguro enviar mis documentos por WhatsApp?</h3>
+                                <p>Absolutamente. En <strong>Gestor de Autos</strong> manejamos tu información con
+                                    estricta
+                                    confidencialidad. Somos profesionales con cientos de casos de éxito verificables.
+                                </p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>¿Cuánto cuesta el refrendo en Morelos 2026?</h3>
+                                <p>El <strong>costo oficial del refrendo vehicular Morelos 2026</strong> es de $1,170.57
+                                    MXN. Nosotros te ayudamos con el trámite completo por <strong>$300-500 MXN
+                                        adicionales</strong>, haciendo todo el proceso en línea por ti en menos de 24
+                                    horas.
+                                </p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>¿Cómo pagar el refrendo de Morelos en línea?</h3>
+                                <p>Puedes <strong>pagar el refrendo Morelos en línea</strong> a través del portal
+                                    digital.morelos.gob.mx. Sin embargo, nosotros hacemos todo el trámite por ti: solo
+                                    envías tu INE y datos del vehículo por WhatsApp, y nosotros nos encargamos del
+                                    resto.
+                                </p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>¿Qué requisitos necesito para el refrendo Morelos?</h3>
+                                <p>Los <strong>requisitos para el refrendo Morelos</strong> son: INE vigente (frontal y
+                                    trasera), número de placas, últimos 5 dígitos del número de serie, y póliza de
+                                    seguro
+                                    (opcional). Nosotros validamos tus documentos antes de procesar.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="faq-grid">
-                        <div class="faq-item">
-                            <h3>¿Cuál es el costo de un gestor vehicular en CDMX?</h3>
-                            <p>El costo de nuestra gestoría es competitivo y depende del trámite. Atendemos altas, bajas
-                                y cambios de propietario con <strong>entrega garantizada</strong>.</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Cómo saber si mi auto necesita reemplacamiento?</h3>
-                            <p>Si tus placas fueron expedidas en 2021 o antes, debes reemplacar en 2026. Nosotros
-                                realizamos tu <strong>reemplacamiento EdoMex online</strong> rápido y seguro.</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Cómo tramitar la Licencia Permanente Tipo A en CDMX?</h3>
-                            <p>La <strong>Licencia Permanente CDMX</strong> sigue disponible en 2026. Nosotros te
-                                ayudamos a agendar tu cita y gestionar el pago de derechos para asegurar tu trámite
-                                exitoso.</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Cuándo toca el reemplacamiento 2026 en Edomex?</h3>
-                            <p>El programa de <strong>reemplacamiento Edomex 2026</strong> inicia en el segundo
-                                semestre. Es obligatorio para placas expedidas en 2021. ¡Contáctanos para pre-registrate
-                                y evitar multas!</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Atienden urgencias de placas en Interlomas?</h3>
-                            <p>Sí, brindamos atención prioritaria en <strong>Interlomas y Huixquilucan</strong>. Podemos
-                                gestionar tus placas y entregarlas en tu domicilio en tiempo récord.</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Es seguro enviar mis documentos por WhatsApp?</h3>
-                            <p>Absolutamente. En <strong>Gestor de Autos</strong> manejamos tu información con estricta
-                                confidencialidad. Somos profesionales con cientos de casos de éxito verificables.</p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Cuánto cuesta el refrendo en Morelos 2026?</h3>
-                            <p>El <strong>costo oficial del refrendo vehicular Morelos 2026</strong> es de $1,170.57
-                                MXN. Nosotros te ayudamos con el trámite completo por <strong>$300-500 MXN
-                                    adicionales</strong>, haciendo todo el proceso en línea por ti en menos de 24 horas.
-                            </p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Cómo pagar el refrendo de Morelos en línea?</h3>
-                            <p>Puedes <strong>pagar el refrendo Morelos en línea</strong> a través del portal
-                                digital.morelos.gob.mx. Sin embargo, nosotros hacemos todo el trámite por ti: solo
-                                envías tu INE y datos del vehículo por WhatsApp, y nosotros nos encargamos del resto.
-                            </p>
-                        </div>
-                        <div class="faq-item">
-                            <h3>¿Qué requisitos necesito para el refrendo Morelos?</h3>
-                            <p>Los <strong>requisitos para el refrendo Morelos</strong> son: INE vigente (frontal y
-                                trasera), número de placas, últimos 5 dígitos del número de serie, y póliza de seguro
-                                (opcional). Nosotros validamos tus documentos antes de procesar.</p>
-                        </div>
-                    </div>
                 </div>
-            </div>
         </section>
 
         <!-- Google Reviews Section -->
