--- a/index.html
+++ b/index.html
@@ -990,10 +990,9 @@
                             <h2 class="seo-title" style="color: #1e293b; font-weight: 900; font-size: 2.5rem;">Servicios
                                 de
                                 Gestoría: Preguntas Frecuentes 2026</h2>
-                            <p style="color: #64748b; font-size: 1.1rem; max-width: 700px; margin: 1rem auto;">
-                                Resolvemos
-                                tus dudas con claridad y dinamismo. Haz clic o pasa el cursor sobre las burbujas para
-                                interactuar.</p>
+                            <p style="color: #64748b; font-size: 1.1rem; max-width: 700px; margin: 1rem auto;">Brindamos
+                                respuestas eficientes y profesionales a las preguntas más frecuentes para agilizar tus
+                                trámites vehiculares.</p>
                         </div>
                         <div class="faq-grid">
                             <div class="faq-item">
