--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
 
         gtag('config', 'G-BNJCSQXF11');
     </script>
-    <title>Refrendo MORELOS 2026 Online #1 | Gestoría Vehicular CDMX | Reemplacamiento EdoMex | Licencia Permanente
-    </title>
+    <title>Gestoría Vehicular CDMX | EdoMex Reemplacamiento 2026 | Refrendo Morelos #1</title>
     <meta name="description"
-        content="Gestoría vehicular líder 2026. Tramitamos Refrendo Morelos Online, Reemplacamiento EdoMex y Licencia Permanente CDMX. Sin filas, 100% seguro. ¡Cotiza por WhatsApp ahora!">
+        content="Gestoría vehicular #1 en CDMX y EdoMex 2026. Alta de placas, Reemplacamiento Estado de México y Licencia Permanente CDMX. Trámites 100% seguros y rápidos. ¡Cotiza hoy!">
     <meta name="keywords"
-        content="alta de placas edomex 2026, licencia permanente cdmx, reemplacamiento edomex 2026, alta de placas cdmx 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, legalización de autos, repuve, refrendo morelos 2026, costo refrendo morelos 2026, pagar refrendo morelos en línea, gestoria vehicular estado de mexico, placas edomex, tramites vehiculares chalco, gestoria vehicular ixtapaluca, placas huixquilucan, licencias de conducir edomex, tramites vehiculares interlomas, gestoria vehicular tlalnepantla, ecatepec, cuautitlan izcalli, gestor de autos">
+        content="gestoria vehicular cdmx, reemplacamiento edomex 2026, licencia permanente cdmx, alta de placas cdmx, gestoria vehicular estado de mexico, placas edomex 2026, baja de placas edomex, cambio de propietario cdmx, permiso provisional para circular, refrendo morelos 2026, costo refrendo morelos 2026, gestor de autos cdmx, tramites vehiculares interlomax, huixquilucan, chalco, ixtapaluca, tlalnepantla, naucalpan">
     <link rel="canonical" href="https://gestordeautos.com.mx/">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-    <!-- Geo Tags for Local SEO -->
+    <!-- Geo Tags for Local SEO (EdoMex & CDMX) -->
     <meta name="geo.region" content="MX-MEX">
-    <meta name="geo.placename" content="Estado de México">
-    <meta name="geo.position" content="19.3592;-99.3582">
-    <meta name="ICBM" content="19.3592, -99.3582">
+    <meta name="geo.placename" content="Estado de México, Ciudad de México">
+    <meta name="geo.position" content="19.4326;-99.1332">
+    <meta name="ICBM" content="19.4326, -99.1332">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="48x48" href="assets/images/logo.jpg">
@@ -42,17 +41,17 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gestordeautos.com.mx/">
-    <meta property="og:title" content="Gestor de Autos | Trámites Vehiculares Expertos">
+    <meta property="og:title" content="Gestoría Vehicular CDMX y EdoMex | Gestor de Autos">
     <meta property="og:description"
-        content="Evita filas y multas. Realizamos tu alta de placas, licencias, cambios de propietario y regularización en EdoMex, CDMX y Morelos. Servicio 100% garantizado.">
+        content="Expertos en alta de placas, reemplacamiento y licencia permanente en CDMX y Estado de México. Evita filas y multas con nuestro servicio 100% garantizado.">
     <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gestordeautos.com.mx/">
-    <meta property="twitter:title" content="Gestor de Autos | Trámites Vehiculares CDMX & EdoMex">
+    <meta property="twitter:title" content="Gestoría Vehicular CDMX & EdoMex | Gestor de Autos">
     <meta property="twitter:description"
-        content="Evita filas y multas. Realizamos tu alta de placas, licencias, cambios de propietario y regularización en EdoMex, CDMX y Morelos. Servicio 100% garantizado.">
+        content="Alta de placas, reemplacamiento y trámites vehiculares en CDMX y Estado de México. Sin filas, 100% seguro. ¡Cotiza hoy!">
     <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data -->
@@ -107,10 +106,11 @@
           ],
           "sameAs": ["https://wa.me/525535757364"],
           "areaServed": [
-            "Ciudad de México", "Estado de México", "Morelos", "Huixquilucan", "Interlomas", 
+            "Ciudad de México", "Estado de México", "CDMX", "Edomex", "Morelos", "Huixquilucan", "Interlomas", 
             "Chalco", "Ixtapaluca", "Tlalnepantla", "Ecatepec", "Chapa de Mota",
             "Texcoco", "Chimalhuacán", "Valle de Chalco", "La Paz", "Coacalco", "Cuautitlán Izcalli",
-            "Naucalpan de Juárez", "Atizapán de Zaragoza", "Metepec", "Toluca", "Cuernavaca", "Pachuca"
+            "Naucalpan de Juárez", "Atizapán de Zaragoza", "Metepec", "Toluca", "Cuernavaca", "Pachuca",
+            "Benito Juárez", "Miguel Hidalgo", "Coyoacán", "Cuauhtémoc", "Tlalpan"
           ],
           "priceRange": "$$",
           "aggregateRating": {
@@ -214,6 +214,40 @@
           "item": "https://gestordeautos.com.mx/#contacto"
         }
       ]
+    }
+    </script>
+    <!-- CDMX Gestoría Service Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "Gestoría Vehicular CDMX",
+      "name": "Gestoría Vehicular y Placas CDMX",
+      "description": "Expertos en trámites vehiculares en la Ciudad de México: alta de placas, licencia permanente y cambios de propietario.",
+      "provider": {
+        "@id": "https://gestordeautos.com.mx/#organization"
+      },
+      "areaServed": {
+        "@type": "City",
+        "name": "Ciudad de México"
+      }
+    }
+    </script>
+    <!-- EdoMex Reemplacamiento Service Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "Reemplacamiento EdoMex",
+      "name": "Reemplacamiento Estado de México 2026",
+      "description": "Servicio de gestoría para el reemplacamiento obligatorio 2026 en el Estado de México. Rápido y sin filas.",
+      "provider": {
+        "@id": "https://gestordeautos.com.mx/#organization"
+      },
+      "areaServed": {
+        "@type": "State",
+        "name": "Estado de México"
+      }
     }
     </script>
     <!-- Refrendo Morelos Service Schema -->
@@ -322,21 +356,20 @@
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
                         <span style="font-weight: 800; color: white; display: block;"
-                            data-i18n="hero_title_main">Gestoría Vehicular CDMX y Estado de México</span>
+                            data-i18n="hero_title_main">Gestoría Vehicular #1 en CDMX y Estado de México</span>
                         <span
                             style="font-weight: 600; color: #e2e8f0; font-size: 0.6em; display: block; margin-top: 0.5rem; letter-spacing: 1px; text-transform: uppercase;"
                             data-i18n="hero_title_sub">
-                            Chalco · Ixtapaluca · Huixquilucan · Interlomas · Naucalpan · Tlalnepantla · Ecatepec
+                            Licencia Permanente · Reemplacamiento · Alta de Placas
                         </span>
                         <span
-                            style="font-family: 'Yellowtail', cursive; font-size: 1.5em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
-                            Expertos en Placas y Licencia Permanente
+                            style="font-family: 'Yellowtail', cursive; font-size: 1.2em; color: #fbbf24; text-shadow: 2px 2px 0 #000; display: block; margin-top: 1rem;">
+                            Chalco · Ixtapaluca · Huixquilucan · Naucalpan · CDMX
                         </span>
                     </h1>
-                    <p><strong data-i18n="hero_desc_bold">¿Buscas Placas o Licencia Permanente?</strong> <span
-                            data-i18n="hero_desc_text">Somos expertos en <b>Trámites del Estado de México en línea</b>.
-                            Sin filas. Cubrimos <b>Todo el Estado de México, Chalco, Huixquilucan e Interlomas entre
-                                otros</b>.</span>
+                    <p><strong data-i18n="hero_desc_bold">¿Buscas Placas en CDMX o EdoMex?</strong> <span
+                            data-i18n="hero_desc_text">Somos expertos en <b>Trámites del Estado de México y CDMX</b>.
+                            Sin filas. Cubrimos <b>Chalco, Huixquilucan, Interlomas, Naucalpan y todo CDMX</b>.</span>
                     </p>
                     <div class="hero-buttons">
                         <a href="https://wa.me/525535757364?text=Hola,%20vengo%20por%20trámites%20online"
