--- a/index.html
+++ b/index.html
@@ -355,6 +355,10 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1 style="font-size: 2.5rem; line-height: 1.2;">
+                        <div style="background: #ef4444; color: white; padding: 4px 12px; border-radius: 6px; font-size: 0.9rem; font-weight: 800; display: inline-block; margin-bottom: 1rem; animation: pulse 2s infinite;"
+                            class="urgent-badge-hero">
+                            ¡URGENTE 2026! REEMPLACAMIENTO EDOMEX
+                        </div>
                         <span style="font-weight: 800; color: white; display: block;"
                             data-i18n="hero_title_main">Gestoría Vehicular #1 en CDMX y Estado de México</span>
                         <span
@@ -367,19 +371,20 @@
                             Chalco · Ixtapaluca · Huixquilucan · Naucalpan · CDMX
                         </span>
                     </h1>
-                    <p><strong data-i18n="hero_desc_bold">¿Buscas Placas en CDMX o EdoMex?</strong> <span
-                            data-i18n="hero_desc_text">Somos expertos en <b>Trámites del Estado de México y CDMX</b>.
-                            Sin filas. Cubrimos <b>Chalco, Huixquilucan, Interlomas, Naucalpan y todo CDMX</b>.</span>
+                    <p><strong data-i18n="hero_desc_bold">¿Tus placas son 2021 o anteriores?</strong> <span
+                            data-i18n="hero_desc_text">Expertos en <b>Reemplacamiento EdoMex 2026</b> y <b>Licencia
+                                CDMX</b>.
+                            Evita multas y corralón. Atención inmediata para <b>Edomex y CDMX</b>.</span>
                     </p>
                     <div class="hero-buttons">
+                        <a href="https://wa.me/525535757364?text=Hola,%20necesito%20reemplacamiento%20EdoMex%202026"
+                            class="btn btn-whatsapp" target="_blank" aria-label="Cotizar trámite por WhatsApp"
+                            style="background: #691C32;">
+                            <i class="fab fa-whatsapp"></i> Reemplaca EdoMex 2026
+                        </a>
                         <a href="https://wa.me/525535757364?text=Hola,%20vengo%20por%20trámites%20online"
                             class="btn btn-whatsapp" target="_blank" aria-label="Cotizar trámite por WhatsApp">
-                            <i class="fab fa-whatsapp"></i> ¡Tramitar Online Ahora!
-                        </a>
-                        <a href="#servicios" class="btn btn-primary"
-                            style="background-color: transparent; border: 2px solid white;"
-                            data-i18n="btn_view_services">
-                            Ver Servicios
+                            <i class="fab fa-whatsapp"></i> Otros Trámites
                         </a>
                     </div>
 
@@ -453,6 +458,104 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- New Trámites Garantizados Section (PRIORITY) -->
+        <section class="section-padding tramites-section" id="reemplacamiento">
+            <div class="container">
+                <h2 class="section-heading">TRÁMITES VEHICULARES GARANTIZADOS</h2>
+
+                <!-- Reemplacamiento Urgent Card -->
+                <div class="urgent-card">
+                    <div class="urgent-badge">¡URGENTE 2026!</div>
+                    <div class="urgent-image">
+                        <!-- Realistic CSS License Plate -->
+                        <div class="license-plate">
+                            <div class="plate-header">Estado de México</div>
+                            <div class="plate-body">
+                                <span>NEX-2026</span>
+                            </div>
+                            <div class="plate-footer"></div>
+                        </div>
+                    </div>
+                    <div class="urgent-content">
+                        <h3 class="tramite-title" style="color: #691C32; margin-bottom: 0.5rem;">REEMPLACAMIENTO EDOMEX
+                            2026</h3>
+                        <h4 class="tramite-subtitle" style="color: #9d2449; margin-bottom: 1rem;">¿Tus placas son 2021 o
+                            anteriores?</h4>
+                        <p class="tramite-desc" style="color: #4b5563; margin-bottom: 1.5rem;">
+                            Ya no están vigentes. Evita el corralón y multas superiores a <strong>$3,000 MXN</strong>.
+                            Gestionamos tu renovación o alta de placas 100% online y seguro.
+                        </p>
+                        <a href="https://wa.me/525535757364?text=Hola,%20mis%20placas%20son%20anteriores%20a%202021,%20necesito%20reemplacamiento"
+                            class="btn btn-whatsapp-full"
+                            style="background: #691C32; box-shadow: 0 4px 12px rgba(105, 28, 50, 0.4);">
+                            <i class="fas fa-exclamation-triangle"></i> Renovar Mis Placas Ahora
+                        </a>
+                    </div>
+                </div>
+
+                <div class="tramites-grid">
+                    <!-- Permiso Card -->
+                    <div class="tramite-card">
+                        <h3 class="tramite-title">Permiso de Circulación Provisional</h3>
+                        <div class="tramite-image">
+                            <img loading="lazy" decoding="async" src="assets/images/permiso_2026.png"
+                                alt="Permiso Provisional Guerrero 2026 Uso Demostrativo" width="300" height="200">
+                        </div>
+                        <p class="tramite-validity">VÁLIDO EN TODA LA REPÚBLICA MEXICANA</p>
+
+                        <h4 class="tramite-subtitle">Tipos de permiso</h4>
+                        <p class="tramite-desc">
+                            PERMISO PROVISIONAL POR 30 DÍAS PARA CIRCULAR SIN PLACAS Y SIN TARJETA DE CIRCULACIÓN
+                        </p>
+
+                        <div class="tramite-btn-container">
+                            <a href="https://wa.me/525535757364?text=Acabo%20de%20comprar%20auto%20y%20necesito%20permiso"
+                                class="btn btn-whatsapp-full">
+                                <i class="fas fa-car-sparkles"></i> ¿Auto Nuevo? Tramita aquí
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Licencia Card -->
+                    <div class="tramite-card">
+                        <h3 class="tramite-title">Licencia Permanente Tipo A de Ciudad de México</h3>
+                        <div class="tramite-image">
+                            <img loading="lazy" decoding="async" src="assets/images/licencia_morada.png"
+                                alt="Licencia Permanente Tipo A Morada" width="280" height="180"
+                                style="max-width: 280px;">
+                        </div>
+                        <p class="tramite-validity">VÁLIDO EN TODA LA REPÚBLICA MEXICANA</p>
+
+                        <h4 class="tramite-subtitle">Requisitos</h4>
+                        <ul class="requirements-list">
+                            <li class="req-item">
+                                <strong>CURP</strong>
+                                <span>(1 copia)</span>
+                            </li>
+                            <li class="req-item">
+                                <strong>Identificación Oficial</strong>
+                                <span>(1 copia)</span>
+                            </li>
+                            <li class="req-item">
+                                <strong>Comprobante de domicilio</strong>
+                                <span>(1 copia)</span>
+                            </li>
+                        </ul>
+
+                        <h4 class="tramite-subtitle">Tipos de licencia</h4>
+                        <div style="display: flex; gap: 2rem; flex-wrap: wrap; justify-content: center;">
+                            <div style="max-width: 250px; text-align: center;">
+                                <strong
+                                    style="display: block; color: #475569; margin-bottom: 0.5rem; font-size: 1.1rem;">LICENCIA
+                                    DE AUTOMOVILISTA (A)</strong>
+                                <p style="font-size: 0.9rem; color: #64748b;">Vehículos de motor destinados al uso
+                                    exclusivo particular.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -1431,104 +1534,7 @@
                 </div>
         </section>
 
-        <!-- New Trámites Garantizados Section -->
-        <section class="section-padding tramites-section">
-            <div class="container">
-                <h2 class="section-heading">TRÁMITES VEHICULARES GARANTIZADOS</h2>
 
-                <!-- Reemplacamiento Urgent Card -->
-                <div class="urgent-card">
-                    <div class="urgent-badge">¡URGENTE 2026!</div>
-                    <div class="urgent-image">
-                        <!-- Realistic CSS License Plate -->
-                        <div class="license-plate">
-                            <div class="plate-header">Estado de México</div>
-                            <div class="plate-body">
-                                <span>NEX-2026</span>
-                            </div>
-                            <div class="plate-footer"></div>
-                        </div>
-                    </div>
-                    <div class="urgent-content">
-                        <h3 class="tramite-title" style="color: #691C32; margin-bottom: 0.5rem;">REEMPLACAMIENTO EDOMEX
-                            2026</h3>
-                        <h4 class="tramite-subtitle" style="color: #9d2449; margin-bottom: 1rem;">¿Tus placas son 2021 o
-                            anteriores?</h4>
-                        <p class="tramite-desc" style="color: #4b5563; margin-bottom: 1.5rem;">
-                            Ya no están vigentes. Evita el corralón y multas superiores a <strong>$3,000 MXN</strong>.
-                            Gestionamos tu renovación o alta de placas 100% online y seguro.
-                        </p>
-                        <a href="https://wa.me/525535757364?text=Hola,%20mis%20placas%20son%20anteriores%20a%202021,%20necesito%20reemplacamiento"
-                            class="btn btn-whatsapp-full"
-                            style="background: #691C32; box-shadow: 0 4px 12px rgba(105, 28, 50, 0.4);">
-                            <i class="fas fa-exclamation-triangle"></i> Renovar Mis Placas Ahora
-                        </a>
-                    </div>
-                </div>
-
-                <div class="tramites-grid">
-                    <!-- Permiso Card -->
-                    <div class="tramite-card">
-                        <h3 class="tramite-title">Permiso de Circulación Provisional</h3>
-                        <div class="tramite-image">
-                            <img loading="lazy" decoding="async" src="assets/images/permiso_2026.png"
-                                alt="Permiso Provisional Guerrero 2026 Uso Demostrativo" width="300" height="200">
-                        </div>
-                        <p class="tramite-validity">VÁLIDO EN TODA LA REPÚBLICA MEXICANA</p>
-
-                        <h4 class="tramite-subtitle">Tipos de permiso</h4>
-                        <p class="tramite-desc">
-                            PERMISO PROVISIONAL POR 30 DÍAS PARA CIRCULAR SIN PLACAS Y SIN TARJETA DE CIRCULACIÓN
-                        </p>
-
-                        <div class="tramite-btn-container">
-                            <a href="https://wa.me/525535757364?text=Acabo%20de%20comprar%20auto%20y%20necesito%20permiso"
-                                class="btn btn-whatsapp-full">
-                                <i class="fas fa-car-sparkles"></i> ¿Auto Nuevo? Tramita aquí
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- Licencia Card -->
-                    <div class="tramite-card">
-                        <h3 class="tramite-title">Licencia Permanente Tipo A de Ciudad de México</h3>
-                        <div class="tramite-image">
-                            <img loading="lazy" decoding="async" src="assets/images/licencia_morada.png"
-                                alt="Licencia Permanente Tipo A Morada" width="280" height="180"
-                                style="max-width: 280px;">
-                        </div>
-                        <p class="tramite-validity">VÁLIDO EN TODA LA REPÚBLICA MEXICANA</p>
-
-                        <h4 class="tramite-subtitle">Requisitos</h4>
-                        <ul class="requirements-list">
-                            <li class="req-item">
-                                <strong>CURP</strong>
-                                <span>(1 copia)</span>
-                            </li>
-                            <li class="req-item">
-                                <strong>Identificación Oficial</strong>
-                                <span>(1 copia)</span>
-                            </li>
-                            <li class="req-item">
-                                <strong>Comprobante de domicilio</strong>
-                                <span>(1 copia)</span>
-                            </li>
-                        </ul>
-
-                        <h4 class="tramite-subtitle">Tipos de licencia</h4>
-                        <div style="display: flex; gap: 2rem; flex-wrap: wrap; justify-content: center;">
-                            <div style="max-width: 250px; text-align: center;">
-                                <strong
-                                    style="display: block; color: #475569; margin-bottom: 0.5rem; font-size: 1.1rem;">LICENCIA
-                                    DE AUTOMOVILISTA (A)</strong>
-                                <p style="font-size: 0.9rem; color: #64748b;">Vehículos de motor destinados al uso
-                                    exclusivo particular.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- Coverage Areas Section -->
         <section class="section-padding coverage-section"
             style="background: #0f172a; color: white; text-align: center;">
