--- a/index.html
+++ b/index.html
@@ -551,8 +551,12 @@
                             <div class="service-header">
                                 <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
                                 <div>
-                                    <h4>Reemplacamiento EdoMex 2026</h4>
-                                    <small>Renovación obligatoria placas 2021, ¿cambio de propietario dentro de los
+                                    <h4 style="margin-bottom: 0;">Reemplacamiento EdoMex 2026</h4>
+                                    <small><a href="tramites-edomex.html"
+                                            style="color: #2563eb; text-decoration: underline;">Ver detalles exclusivos
+                                            EdoMex</a></small>
+                                    <small style="display: block; margin-top: 0.2rem;">Renovación obligatoria placas
+                                        2021, ¿cambio de propietario dentro de los
                                         primeros
                                         30 días de un nuevo vehículo? Aquí lo realizamos rápido por ti.</small>
                                 </div>
